added authentication and user signup

--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -43,7 +43,7 @@
            ngModel
            #password="ngModel"
     >
-    <mat-error *ngIf="password.invalid">Please enter a password</mat-error>
+    <mat-error *ngIf="password.invalid">Please make sure your password is at least 6 characters long</mat-error>
   </mat-form-field>
 
   <button
