--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-card-title>
-  <h1 class="title"> <span><img class="basketall" src="../../assets/images/basketball.svg"></span> Lifetime Fitness Basketball</h1>
+  <h1 class="title"> <span><img class="basketall" src="../../assets/images/basketball.svg"></span> LIFE TIME Basketball <span><img class="basketall" src="../../assets/images/basketball.svg"></span></h1>
 </mat-card-title>
 <hr>
 <nav mat-tab-nav-bar class="lib-flex">
