--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSignin(f)" #f="ngForm">
+<form (ngSubmit)="onSignin(f)" #f="ngForm" id="formContainer">
   <mat-form-field class="formField">
     <input required
            email
