--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSignup(f)" #f="ngForm">
+<form (ngSubmit)="onSignup(f)" #f="ngForm" id="formContainer">
   <mat-form-field class="formField">
     <input required
            matInput
