--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,5 @@
 @import '../../src/_globalVariables.scss';
+
+* {
+  font-family: BlinkMacSystemFont,system-ui,Helvetica Neue,Roboto,Segoe UI,Helvetica,Arial,sans-serif;
+}
