--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,10 @@
 <div class="container lib-flex lib-stack lib-cross-center">
   <mat-card-title>
-    <h1 class="title"> <span><img class="basketall" src="../../assets/images/basketball.svg"></span> LIFE TIME Basketball <span><img class="basketall" src="../../assets/images/basketball.svg"></span></h1>
+    <div class="lifetime">
+      <img src="../../assets/images/lifetime-logo.svg">
+    </div>
+    <h1 class="title"><span></span> BASKETBALL</h1>
   </mat-card-title>
-  <hr>
   <nav mat-tab-nav-bar class="lib-flex">
     <ng-template [ngIf]="authService.isAuthenticated()">
       <a mat-tab-link
