--- a/src/app/next-game/next-game.component.html
+++ b/src/app/next-game/next-game.component.html
@@ -1,11 +1,32 @@
-<h1>Next Game is: {{nextGame}} <i class="material-icons">watch</i> </h1>
-<hr>
-<h3>My Status For Next Game Is: <span [ngClass]="{in: status =='IN', out: status =='OUT'}">{{status}}</span></h3>
-<mat-slide-toggle (click)="onSlide()">
-  Slide to toggle your status for next game!
-</mat-slide-toggle>
-<button (click)="onAdd()">Update My Status!</button>
-<hr>
-<app-players></app-players>
-<p *ngFor="let player of players"> {{player.firstName}} is {{player.status}} <i class="material-icons">thumb_down</i> <i class="material-icons">thumb_up</i></p>
+<div class="container">
+  <h1>The next game is: {{nextGame}} <i class="material-icons">watch</i> </h1>
+  <app-calendar></app-calendar>
+  <hr>
+  <h3>My Status For Next Game Is: <span [ngClass]="{in: status =='IN', out: status =='OUT'}">{{status}}</span></h3>
+  <mat-slide-toggle (click)="onSlide()" [checked]="checked">
+    Slide to toggle your status for next game!
+  </mat-slide-toggle>
+</div>
 
+<hr>
+<div class="lib-flex statusDiv">
+  <div>
+    <h1>PLAYERS IN: {{playersIn.length}}</h1>
+    <div *ngFor="let player of playersIn">
+      {{player.firstName}} is {{player.status}}
+    </div>
+  </div>
+
+  <div>
+    <h1>PLAYERS OUT: {{playersOut.length}}</h1>
+    <div *ngFor="let player of playersOut">
+      {{player.firstName}} is {{player.status}}
+    </div>
+  </div>
+
+  <!--<p *ngFor="let player of players" class="lib-tt-uppercase">-->
+    <!---->
+    <!--<i class="material-icons" *ngIf="player.status === 'OUT'">thumb_down</i>-->
+    <!--<i class="material-icons" *ngIf="player.status === 'IN'">thumb_up</i>-->
+  <!--</p>-->
+</div>
