--- a/src/app/next-game/next-game.component.scss
+++ b/src/app/next-game/next-game.component.scss
@@ -1,7 +1,19 @@
+@import '../../../src/_globalVariables.scss';
+
 .out{
   color: red;
 }
 
 .in{
   color: green;
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.statusDiv{
+  justify-content: space-evenly;
 }
