--- a/src/app/auth/sign-in/sign-in.component.scss
+++ b/src/app/auth/sign-in/sign-in.component.scss
@@ -1,7 +1,5 @@
 .formField {
-  min-width: 150px;
-  max-width: 500px;
-  width: 100%;
+  width: 65%;
 }
 
 form {
@@ -12,4 +10,8 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
 }
