correctly displaying oninit

--- a/src/_globalVariables.scss
+++ b/src/_globalVariables.scss
@@ -3,6 +3,11 @@ $desktop: only screen and (min-width : 1020px);
 $ultrawide: only screen and (min-width : 1280px);
 
 
+// COLORS
+$app-blue: #0078aa;
+$app-grey: #CCCCCC;
+$app-black: #444;
+
 
 // CSS Library
 
