--- a/src/app/next-game/calendar/calendar.component.html
+++ b/src/app/next-game/calendar/calendar.component.html
@@ -1,6 +1,2 @@
-<!--<mat-form-field>-->
-<!--<input matInput [matDatepicker]="picker" placeholder="Choose a date">-->
-<!--<mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>-->
-<!--<mat-datepicker #picker></mat-datepicker>-->
-<!--</mat-form-field>-->
 <h1>{{gameDay}}</h1>
+<h1>AT <i class="material-icons">watch</i> {{gameTime}}</h1>
