show hide password functionality

--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -15,13 +15,16 @@
     <input required
            password
            matInput
-           type="password"
+           [type]="showPassword? 'text' : 'password'"
            placeholder="Password"
            name="password"
            ngModel
            #password="ngModel"
     >
+    <i *ngIf="!showPassword" class="material-icons" (click)="toggleShowPassword()">visibility</i>
+    <i *ngIf="showPassword" class="material-icons" (click)="toggleShowPassword()">visibility_off</i>
     <mat-error *ngIf="password.invalid">Please enter a password</mat-error>
+
   </mat-form-field>
 
   <button
