--- a/src/app/auth/sign-in/sign-in.component.scss
+++ b/src/app/auth/sign-in/sign-in.component.scss
@@ -1,7 +1,7 @@
 @import '../../../../src/_globalVariables.scss';
 
 .formField {
-  width: 65%;
+  width: 40%;
 }
 
 form {
@@ -20,3 +20,7 @@ form {
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
 }
+
+//.password {
+//  display: flex;
+//}
